# rent-scraper

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  Spacefile  alembic.ini  create_user.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_scraper.py  run_web.py  sources.py
.github/workflows/: docker.yml  test-sources.yml
alembic/: env.py
alembic/versions/: 376ad166ceca_initial_migration.py  e2195fed6d5c_add_scraping_status_tracking_to_search_.py
app/: app.py  auth.py  database.py  models.py  scraper.py  sources.py
app/static/css/: .gitkeep
app/static/js/: .gitkeep
app/templates/: base.html  dashboard.html  error.html  login.html  notification_form.html  notification_test_results.html  notifications.html  queries.html  query_form.html  test_results.html
listing_spy/: actions.py  db.py  notifications.py  sources.py  web.py
notebooks/: playground.py
templates/: add_notification.html  add_source.html  base.html  index.html
tests/: test_sources.py
