[tool.poetry]
name = "rent-scraper"
version = "0.1.0"
description = ""
authors = ["LiquidLemon <liquidlemon@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
deta = "^1.1.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
