[project]
name = "rent-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "requests>=2.32.5",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "sqlalchemy",
    "alembic",
    "passlib[bcrypt]",
    "itsdangerous",
]

[dependency-groups]
dev = [
    "marimo>=0.16.0",
    "types-requests>=2.32.4.20250913",
]

[tool.marimo.runtime]
pythonpath = ["app"]
